fix hero on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,7 +288,7 @@ h6 {
   position: relative;
 }
 
-@media screen and (min-width: 100px) and (max-width: 350px) {
+@media screen and (min-width: 100px) and (max-width: 1250px) {
   #hero {
     background: url("../img/mobile.JPG") center no-repeat;
     background-size: cover;
